fix(AdvancedSend): height and flickering issues when switching from advanced send to regular

--- a/assets/css/components/_modals.scss
+++ b/assets/css/components/_modals.scss
@@ -375,7 +375,6 @@
     padding: 0px;
     > div {
       max-height: 400px;
-      min-height: 400px;
       overflow: scroll;
       padding: 15px 0;
       &:first-child {
