--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -113,4 +113,7 @@
       }
     }
   }
+  & + .modal-footer {
+    clear: left;
+  }
 }
